--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
+pillow==12.0.0
 redis==7.0.1
 requests==2.32.5
 spotipy==2.25.1
 urllib3==2.5.0
 Werkzeug==3.1.3
+gunicorn
